--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,11 @@ channels==4.0.0
 Django==4.2.7
 django-filter==23.4
 djangorestframework==3.14.0
+gunicorn==21.2.0
+packaging==23.2
+psycopg==3.1.14
+psycopg-binary==3.1.14
 pytz==2023.3.post1
 sqlparse==0.4.4
+typing_extensions==4.8.0
 tzdata==2023.3
