--- a/.gitignore
+++ b/.gitignore
@@ -261,3 +261,4 @@ fabric.properties
 # End of https://www.toptal.com/developers/gitignore/api/dotenv,django,pycharm
 /static/
 /.env.test
+/staticfiles/
