--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ gunicorn==21.2.0
 packaging==23.2
 psycopg==3.1.14
 psycopg-binary==3.1.14
+python-dotenv==1.0.0
 pytz==2023.3.post1
 sqlparse==0.4.4
 typing_extensions==4.8.0
